nikon_microscope/PI_GCS2_DLL.h

/////////////////////////////////////////////////////////////////////////////
// Wave commands.
BOOL PI_FUNC_DECL PI_IsGeneratorRunning(int ID, const int* piWaveGeneratorIds, BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTWG(int ID, int* piWaveGenerators);
BOOL PI_FUNC_DECL PI_WAV_SIN_P(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iCenterPointOfWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
BOOL PI_FUNC_DECL PI_WAV_LIN(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iNumberOfSpeedUpDownPointsInWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
BOOL PI_FUNC_DECL PI_WAV_RAMP(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, int iCenterPointOfWave, int iNumberOfSpeedUpDownPointsInWave, double dAmplitudeOfWave, double dOffsetOfWave, int iSegmentLength);
BOOL PI_FUNC_DECL PI_WAV_PNT(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfPoints, int iAddAppendWave, const double* pdWavePoints);
BOOL PI_FUNC_DECL PI_qWAV(int ID, const int* piWaveTableIdsArray, const int* piParamereIdsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_WGO(int ID, const int* piWaveGeneratorIdsArray, const int* iStartModArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qWGO(int ID, const int* piWaveGeneratorIdsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_WGC(int ID, const int* piWaveGeneratorIdsArray, const int* piNumberOfCyclesArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qWGC(int ID, const int* piWaveGeneratorIdsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_WSL(int ID, const int* piWaveGeneratorIdsArray, const int* piWaveTableIdsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qWSL(int ID, const int* piWaveGeneratorIdsArray, int* piWaveTableIdsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_DTC(int ID, const int* piDdlTableIdsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qDTL(int ID, const int* piDdlTableIdsArray, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_WCL(int ID, const int* piWaveTableIdsArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTLT(int ID, int* piNumberOfDdlTables);
BOOL PI_FUNC_DECL PI_qGWD_SYNC(int ID, int iWaveTableId, int iOffsetOfFirstPointInWaveTable, int iNumberOfValues, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qGWD(int ID, const int* iWaveTableIdsArray, int iNumberOfWaveTables, int iOffset, int nrValues, double** pdValarray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_WOS(int ID, const int* iWaveTableIdsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qWOS(int ID, const int* iWaveTableIdsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_WTR(int ID, const int* piWaveGeneratorIdsArray, const int* piTableRateArray, const int* piInterpolationTypeArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qWTR(int ID, const int* piWaveGeneratorIdsArray, int* piTableRateArray, int* piInterpolationTypeArray, int iArraySize);
BOOL PI_FUNC_DECL PI_DDL(int ID, int iDdlTableId,  int iOffsetOfFirstPointInDdlTable,  int iNumberOfValues, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qDDL_SYNC(int ID,  int iDdlTableId,  int iOffsetOfFirstPointInDdlTable,  int iNumberOfValues, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qDDL(int ID, const int* iDdlTableIdsArray, int iNumberOfDdlTables, int iOffset, int nrValues, double** pdValarray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_DPO(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qWMS(int ID, const int* piWaveTableIds, int* iWaveTableMaximumSize, int iArraySize);
BOOL PI_FUNC_DECL PI_TWE(int ID, const int* piWaveTableIdsArray, const int* piWaveTableStartIndexArray, const int* piWaveTableEndIndexArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTWE(int ID, const int* piWaveTableIdsArray, int* piWaveTableStartIndexArray, int* piWaveTableEndIndexArray, int iArraySize);
///////////////////////////////////////////////////////////////////////////////
//// Trigger commands.
BOOL PI_FUNC_DECL PI_TWC(int ID);
BOOL PI_FUNC_DECL PI_TWS(int ID, const int* piTriggerChannelIdsArray, const int* piPointNumberArray, const int* piSwitchArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTWS(int ID, const int* iTriggerChannelIdsArray, int iNumberOfTriggerChannels, int iOffset, int nrValues, double** pdValarray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_CTO(int ID, const int* piTriggerOutputIds, const int* piTriggerParameterArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qCTO(int ID, const int* piTriggerOutputIds, const int* piTriggerParameterArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_TRO(int ID, const int* piTriggerOutputIds, const BOOL* pbTriggerState, int iArraySize);
BOOL PI_FUNC_DECL PI_qTRO(int ID, const int* piTriggerOutputIds, BOOL* pbTriggerState, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// Record table commands.
BOOL PI_FUNC_DECL PI_qHDR(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qTNR(int ID, int* piNumberOfRecordCannels);
BOOL PI_FUNC_DECL PI_DRC(int ID, const int* piRecordTableIdsArray, const char* szRecordSourceIds, const int* piRecordOptionArray);
BOOL PI_FUNC_DECL PI_qDRC(int ID, const int* piRecordTableIdsArray, char* szRecordSourceIds, int* piRecordOptionArray, int iRecordSourceIdsBufferSize, int iRecordOptionArraySize);
BOOL PI_FUNC_DECL PI_qDRR_SYNC(int ID,  int iRecordTablelId,  int iOffsetOfFirstPointInRecordTable,  int iNumberOfValues, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qDRR(int ID, const int* piRecTableIdIdsArray,  int iNumberOfRecTables,  int iOffsetOfFirstPointInRecordTable,  int iNumberOfValues, double** pdValueArray, char* szGcsArrayHeader, int iGcsArrayHeaderMaxSize);
BOOL PI_FUNC_DECL PI_DRT(int ID, const int* piRecordChannelIdsArray, const int* piTriggerSourceArray, const char* szValues, int iArraySize);
BOOL PI_FUNC_DECL PI_qDRT(int ID, const int* piRecordChannelIdsArray, int* piTriggerSourceArray, char* szValues, int iArraySize, int iValueBufferLength);
BOOL PI_FUNC_DECL PI_RTR(int ID, int piReportTableRate);
BOOL PI_FUNC_DECL PI_qRTR(int ID, int* piReportTableRate);
BOOL PI_FUNC_DECL PI_WGR(int ID);
/////////////////////////////////////////////////////////////////////////////
// Piezo-Channel commands.
BOOL PI_FUNC_DECL PI_VMA(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVMA(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_VMI(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVMI(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_VOL(int ID, const int* piPiezoChannelsArray, const double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qVOL(int ID, const int* piPiezoChannelsArray, double* pdValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTPC(int ID, int* piNumberOfPiezoChannels);
BOOL PI_FUNC_DECL PI_ONL(int ID, const int* iPiezoCannels, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qONL(int ID, const int* iPiezoCannels, int* piValueArray, int iArraySize);