nikon_microscope/PI_GCS2_DLL.bas


'/////////////////////////////////////////////////////////////////////////////
'// Wave commands.
Public Declare Function PI_IsGeneratorRunning Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal piWaveGeneratorIds As Long, ByRef pbValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTWG Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGenerators As Long) As Long
Public Declare Function PI_WAV_SIN_P Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iWaveTableId As Long, ByVal iOffsetOfFirstPoIntegerInWaveTable As Long, ByVal iNumberOfPoIntegers As Long, ByVal iAddAppendWave As Long, ByVal iCenterPoIntegerOfWave As Long, ByVal dAmplitudeOfWave As Double, ByVal dOffsetOfWave As Double, ByVal iSegmentLength As Long) As Long
Public Declare Function PI_WAV_LIN Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iWaveTableId As Long, ByVal iOffsetOfFirstPoIntegerInWaveTable As Long, ByVal iNumberOfPoIntegers As Long, ByVal iAddAppendWave As Long, ByVal iNumberOfSpeedUpDownPoIntegersInWave As Long, ByVal dAmplitudeOfWave As Double, ByVal dOffsetOfWave As Double, ByVal iSegmentLength As Long) As Long
Public Declare Function PI_WAV_RAMP Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iWaveTableId As Long, ByVal iOffsetOfFirstPoIntegerInWaveTable As Long, ByVal iNumberOfPoIntegers As Long, ByVal iAddAppendWave As Long, ByVal iCenterPoIntegerOfWave As Long, ByVal iNumberOfSpeedUpDownPoIntegersInWave As Long, ByVal dAmplitudeOfWave As Double, ByVal dOffsetOfWave As Double, ByVal iSegmentLength As Long) As Long
Public Declare Function PI_WAV_PNT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iWaveTableId As Long, ByVal iOffsetOfFirstPoIntegerInWaveTable As Long, ByVal iNumberOfPoIntegers As Long, ByVal iAddAppendWave As Long, ByVal pdWavePoIntegers As Double) As Long
Public Declare Function PI_qWAV Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveTableIdsArray As Long, ByRef piParamereIdsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_WGO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef iStartModArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qWGO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_WGC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piNumberOfCyclesArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qWGC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_WSL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piWaveTableIdsArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qWSL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piWaveTableIdsArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_DTC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piDdlTableIdsArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_WCL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveTableIdsArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTLT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piNumberOfDdlTables As Long) As Long
Public Declare Function PI_qGWD_SYNC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iWaveTableId As Long, ByVal iOffsetOfFirstPoIntegerInWaveTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qGWD Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iWaveTableIdsArray As Long, ByVal iNumberOfWaveTables As Long, ByVal iOffset As Long, ByVal nrValues As Long, ByRef pdValarray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long
Public Declare Function PI_WOS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iWaveTableIdsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qWOS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iWaveTableIdsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_WTR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piTableRateArray As Long, ByRef piIntegererpolationTypeArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qWTR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveGeneratorIdsArray As Long, ByRef piTableRateArray As Long, ByRef piIntegererpolationTypeArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_DDL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iDdlTableId As Long, ByVal iOffsetOfFirstPointInDdlTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qDDL_SYNC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iDdlTableId As Long, ByVal iOffsetOfFirstPoIntegerInDdlTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qDDL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iDdlTableIdsArray As Long, ByVal iNumberOfDdlTables As Long, ByVal iOffsetOfFirstPoIntegerInDdlTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long
Public Declare Function PI_DPO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szAxes As String) As Long
Public Declare Function PI_qWMS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piWaveTableIdsArray As Long, ByRef iWaveTableMaimumSize As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qDTL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piDdlTableIdsArray As Long, ByRef piValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_TWE Lib "PI_GCS2_DLL.dll" (ByVal ID As Long,  ByRef  piWaveTableIdsArray As Long, ByRef piWaveTableStartIndexArray As Long, ByRef piWaveTableEndIndexArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTWE Lib "PI_GCS2_DLL.dll" (ByVal ID As Long,  ByRef  piWaveTableIdsArray As Long, ByRef piWaveTableStartIndexArray As Long, ByRef piWaveTableEndIndexArray As Long, ByVal iArraySize As Long) As Long



'///////////////////////////////////////////////////////////////////////////////
'//// Trigger commands.
Public Declare Function PI_TWC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long
Public Declare Function PI_TWS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTriggerChannelIdsArray As Long, ByRef piPointNumberArray As Long, ByRef piSwitchArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTWS Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef iTriggerChannelIdsArray As Long, ByVal iNumberOfTriggerChannels As Long, ByVal iOffset As Long, ByVal nrValues As Long, ByRef pdValarray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long
Public Declare Function PI_CTO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTriggerOutputIdsArray As Long, ByRef piTriggerParameterArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qCTO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTriggerOutputIdsArray As Long, ByRef piTriggerParameterArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_TRO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTriggerChannelIds As Long, ByRef pbTriggerChannelEnabel As Long, byvaliArraySizeas As Long) As Long
Public Declare Function PI_qTRO Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piTriggerChannelIds As Long, ByRef pbTriggerChannelEnabel As Long, ByVal iArraySize As Long) As Long


'/////////////////////////////////////////////////////////////////////////////
'// Record tabel commands.
Public Declare Function PI_qHDR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal szBuffer As String, ByVal iBufferSize As Long) As Long
Public Declare Function PI_qTNR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piNumberOfRecordCannels As Long) As Long
Public Declare Function PI_DRC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piRecordTableIdsArray As Long, ByVal szRecordSourceIds As String, ByRef piRecordOptionArray As Long) As Long
Public Declare Function PI_qDRC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piRecordTableIdsArray As Long, ByVal szRecordSourceIds As String, ByRef piRecordOptionArray As Long, ByVal iRecordSourceIdsBufferSize As Long, ByVal iRecordOptionArraySize As Long) As Long
Public Declare Function PI_qDRR_SYNC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal iRecordTablelId As Long, ByVal iOffsetOfFirstPoIntegerInRecordTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Double) As Long
Public Declare Function PI_qDRR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piRecTableIdsArray As Long, ByVal iNumberOfRecChannels As Long, ByVal iOffsetOfFirstPoIntegerInRecordTable As Long, ByVal iNumberOfValues As Long, ByRef pdValueArray As Long, ByVal szGcsArrayHeader As String, ByVal iGcsArrayHeaderMaxSize As Long) As Long
Public Declare Function PI_DRT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piRecordChannelIdsArray As Long, ByRef piTriggerSourceArray As Long, ByVal szValues As String, ByVal iArraySize As Long) As Long
Public Declare Function PI_qDRT Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piRecordChannelIdsArray As Long, ByRef piTriggerSourceArray As Long, ByVal szValues As String, ByVal iArraySize As Long, ByVal iValueBufferLength As Long) As Long
Public Declare Function PI_RTR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByVal piReportTableRate As Long) As Long
Public Declare Function PI_qRTR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piReportTableRate As Long) As Long
Public Declare Function PI_WGR Lib "PI_GCS2_DLL.dll" (ByVal ID As Long) As Long


'/////////////////////////////////////////////////////////////////////////////
'// Piezo-Channel commands.
Public Declare Function PI_VMA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qVMA Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_VMI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qVMI Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_VOL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qVOL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoChannelsArray As Long, ByRef pdValueArray As Double, ByVal iArraySize As Long) As Long
Public Declare Function PI_qTPC Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piNumberOfPiezoChannels As Long) As Long
Public Declare Function PI_ONL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoCannelsArray As Long, ByRef pdValueArray As Long, ByVal iArraySize As Long) As Long
Public Declare Function PI_qONL Lib "PI_GCS2_DLL.dll" (ByVal ID As Long, ByRef piPiezoCannelsArray As Long, ByRef pdValueArray As Long, ByVal iArraySize As Long) As Long

